--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
 <body data-bs-spy="scroll" data-bs-target=".navbar">
   <!--Barra de navegacion-->
-  <nav class="navbar navbar-expand-lg background-color-principal mb-3 rounded-bottom ">
+  <nav class="navbar navbar-expand-lg background-color-principal mb-5 rounded-bottom fixed-top">
     <div class="container">
       <a class="navbar-brand text-light fuente-brand" href="#">Physio Animal</a>
       <button class="navbar-toggler text-light" type="button" data-bs-toggle="collapse"
@@ -42,9 +42,9 @@
     </div>
   </nav>
 
-  <div class="container">
+  <div class="container mt-5">
     <!--CARRUSEL-->
-    <div id="carouselExampleAutoplaying" class="carousel slide" data-bs-ride="carousel" data-aos="fade-up"    data-aos-duration="2500">
+    <div id="carouselExampleAutoplaying" class="carousel slide mt-5" data-bs-ride="carousel" data-aos="fade-up"    data-aos-duration="2500">
       <div class="carousel-inner">
         <div class="carousel-item active">
           <img src="assets/img/1.1.png" class="d-block w-100" alt="...">
@@ -105,7 +105,7 @@
   <!--FINAL MISION VISION-->
 
   <!--SERVICIOS-->
-  <div class="container background-color-principal text-light" data-aos="fade-up"    data-aos-duration="2500">
+  <div class="container background-color-principal text-light brservicios" data-aos="fade-up"    data-aos-duration="2500">
     <div class="row">
       <div class="col-12 section-intro text-center">
         <h2 class="text-uppercase mt-4 mb-5  p-3">
@@ -144,7 +144,7 @@
 
     <div class="row"   >
 
-    <div class="card mb-3 col-md-6 m-auto" style="max-width: 540px;" data-aos="fade-up"    data-aos-duration="2500">
+    <div class="card mb-3 col-md-6 " style="max-width: 540px;" data-aos="fade-up"    data-aos-duration="2500">
       <img src="assets/img/1.png" class="card-img-top img-trabajos-previos" alt="...">
       <div class="card-body">
         <h5 class="card-title text-center">LUCKY</h5>
@@ -176,7 +176,7 @@
 
       </div>
     </div>
-    <div class="card mb-3 col-md-6 m-auto" style="max-width: 540px;" data-aos="fade-up"    data-aos-duration="2500" >
+    <div class="card mb-3 col-md-6 " style="max-width: 540px;" data-aos="fade-up"    data-aos-duration="2500" >
       <img src="assets/img/1.png" class="card-img-top img-trabajos-previos" alt="...">
       <div class="card-body">
         <h5 class="card-title text-center">KIIN</h5>
@@ -199,7 +199,15 @@
       <div class="card-body">
         <h5 class="card-title text-center">VALKIRIA</h5>
         <p class="card-text ">Hola mi nombre es Valkiria pero todos me dicen “Valki”, tengo 1 año y medio.
-          Cuando nací sufrí de un accidente traumático, que dejó la mitad de mi cuerpo paralizado, el daño fue irreversible y la probabilidad de que caminara era casi nula, las personas que me tenían en sus manos al escuchar el diagnóstico decidieron dormirme, sin embargo otras personas me salvaron y me dieron otra oportunidad, fui adoptada con discapacidad a los 6 meses ya que me fue difícil encontrar familia rápido, sin embargo la encontré y tengo a la mejor, hoy en día sigo remando día a día para tener una buena calidad de vida, soy una perrita en silla de ruedas, pero gracias a las terapias, nada me duele y mis piernitas se han mantenido fuertes y sanas. La terapia me ayuda a prevenir lesiones a futuro y mantener mi musculatura, hoy en día soy una perrita bastante independiente, corro, juego, brinco, me eh adaptado a mi cuerpo para mis actividades de la vida diaria sin limitaciones.
+          Cuando nací sufrí de un accidente traumático, que dejó la mitad de mi cuerpo paralizado, el daño
+           fue irreversible y la probabilidad de que caminara era casi nula, las personas que me tenían en 
+           sus manos al escuchar el diagnóstico decidieron dormirme, sin embargo otras personas me salvaron y 
+           me dieron otra oportunidad, fui adoptada con discapacidad a los 6 meses ya que me fue difícil encontrar 
+           familia rápido, sin embargo la encontré y tengo a la mejor, hoy en día sigo remando día a día para
+            tener una buena calidad de vida, soy una perrita en silla de ruedas, pero gracias a las terapias, 
+            nada me duele y mis piernitas se han mantenido fuertes y sanas. La terapia me ayuda a prevenir 
+            lesiones a futuro y mantener mi musculatura, hoy en día soy una perrita bastante independiente, 
+            corro, juego, brinco, me eh adaptado a mi cuerpo para mis actividades de la vida diaria sin limitaciones.
           Soy una perrita valiente, fuerte e independiente ❤️‍🩹</p>
 
       </div>
