--- a/assets/pages/nServicios.html
+++ b/assets/pages/nServicios.html
@@ -20,7 +20,7 @@
 
 <body data-bs-spy="scroll" data-bs-target=".navbar">
   <!--Barra de navegacion-->
-  <nav class="navbar navbar-expand-lg background-color-principal mb-3 rounded-bottom ">
+  <nav class="navbar navbar-expand-lg background-color-principal mb-5 rounded-bottom ">
     <div class="container">
       <a class="navbar-brand text-light fuente-brand" href="../../index.html  ">Physio Animal</a>
       <button class="navbar-toggler text-light" type="button" data-bs-toggle="collapse"
@@ -31,13 +31,14 @@
       <div class="collapse navbar-collapse text-light" id="navbarNavAltMarkup">
         <div class="navbar-nav ms-auto ">
           <a class="nav-link text-light active" aria-current="page" href="../../index.html">Inicio</a>
-          <a class="nav-link text-light " href="assets/pages/nServicios.html">servicios</a>
+          <a class="nav-link text-light " href="nServicios.html">servicios</a>
           <a class="nav-link text-light " href="../pages/contacto.html">contacto</a>
         </div>
       </div>
     </div>
   </nav>
-  <div class="container">                <!--INICIO CONTAINER-->
+
+  <div class="container margin-top">                <!--INICIO CONTAINER-->
     <H2 class="text-center">NUESTROS SERVICIOS</H2>
     <h3 class="text-center text-color-principal sombra-textos"> Fisio terapia</h3>
     <div class="row">
