--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
 <body data-bs-spy="scroll" data-bs-target=".navbar">
   <!--Barra de navegacion-->
-  <nav class="navbar navbar-expand-lg background-color-principal mb-5 rounded-bottom fixed-top">
+  <nav class="navbar navbar-expand-lg background-color-principal  rounded-bottom fixed-top">
     <div class="container">
       <a class="navbar-brand text-light fuente-brand" href="#">Physio Animal</a>
       <button class="navbar-toggler text-light" type="button" data-bs-toggle="collapse"
@@ -42,7 +42,7 @@
     </div>
   </nav>
 
-  <div class="container mt-5">
+  <div class="container margin-top">
     <!--CARRUSEL-->
     <div id="carouselExampleAutoplaying" class="carousel slide mt-5" data-bs-ride="carousel" data-aos="fade-up"    data-aos-duration="2500">
       <div class="carousel-inner">
