eliminacion de sombras en text y adecuacion de resoluciones

--- a/assets/pages/contacto.html
+++ b/assets/pages/contacto.html
@@ -67,7 +67,7 @@
                 <div class="col-md-6 text-md-end">
                     <div>
                         <a
-                            href="mailto:contacto@phisioanimal.com?subject=Mail from our Website">contacto@physioanimal.com</a>
+                            href="mailto:contacto@physioanimal.com?subject=Mail from our Website">contacto@physioanimal.com</a>
                     </div>
                 </div>
             </div>
