--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
       </div>
     </div>
     <div class="text-center mt-3 p-5">
-      <button type="button" class="btn text-white "><a class="nav-link" href="">Mas ...</a></button>
+      <button type="button" class="btn text-white "><a class="nav-link" href="assets/pages/nServicios.html">Mas ...</a></button>
     </div>
   </div>
 
@@ -177,7 +177,7 @@
       </div>
     </div>
     <div class="card mb-3 col-md-6 " style="max-width: 540px;" data-aos="fade-up"    data-aos-duration="2500" >
-      <img src="assets/img/1.png" class="card-img-top img-trabajos-previos" alt="...">
+      <img src="assets/img/3.png" class="card-img-top img-trabajos-previos" alt="...">
       <div class="card-body">
         <h5 class="card-title text-center">KIIN</h5>
         <p class="card-text ">Hola mi nombre es Kiin, tengo 7 años y soy un Pitbull, una raza feroz, veloz,
@@ -262,7 +262,7 @@
         </div>
         <div class="col-md-6 text-md-end">
           <div>
-            <a href="mailto:contacto@ingesamid.com?subject=Mail from our Website">contacto@physioanimal.com</a>
+            <a href="mailto:contacto@physioanimal.com?subject=Mail from our Website">contacto@physioanimal.com</a>
           </div>
         </div>
       </div>
