--- a/assets/pages/nServicios.html
+++ b/assets/pages/nServicios.html
@@ -214,7 +214,7 @@
         </div>
         <div class="col-md-6 text-md-end">
           <div>
-            <a href="mailto:contacto@phisioanimal.com?subject=Mail from our Website">contacto@physioanimal.com</a>
+            <a href="mailto:contacto@physioanimal.com?subject=Mail from our Website">contacto@physioanimal.com</a>
           </div>
         </div>
       </div>
