correcion de texto imagenes

--- a/index.html
+++ b/index.html
@@ -2,6 +2,17 @@
 <html lang="es">
 
 <head>
+  <!--INICIO DE METATAGS-->
+  <meta name="title" content="PhysioAnimal">
+<meta name="description" content="Somos un centro de fisioterapia y rehabilitación animal integral, en pequeñas especies, conformado por especialistas dedicados al bienestar y salud de tu mascota.">
+<meta name="keywords" content="Perros, Fisioterapia, Rehabilitación, Animales">
+<meta name="robots" content="index, follow">
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+<meta name="language" content="Spanish">
+<meta name="author" content="Fermin Herrera">
+<meta itemprop="image" href="assets/img/PA_009.jpg">                     
+    
+  <!--FINAL DE METATAGS-->
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Physio Animal</title>
@@ -262,7 +273,7 @@
         </div>
         <div class="col-md-6 text-md-end">
           <div>
-            <a href="mailto:contacto@physioanimal.com?subject=Mail from our Website">contacto@physioanimal.com</a>
+            <a  class="nav-link" href="mailto:contacto@physioanimal.com?subject=Mail from our Website">contacto@physioanimal.com</a>
           </div>
         </div>
       </div>
