--- a/assets/pages/contacto.html
+++ b/assets/pages/contacto.html
@@ -59,7 +59,7 @@
                 </div>
               </div>
        
-            <div class=" col-12 text-center mb-5 w-100 mt-5 mb-5 ">
+            <div class=" col-12 text-center mb-5 w-100 mt-5 mb-5 " style="height: 400px;">
                 <iframe
                     src="https://www.google.com/maps/embed?pb=!1m17!1m12!1m3!1d3724.8101506417256!2d-89.60050612474419!3d21.00024598064194!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m2!1m1!2zMjHCsDAwJzAwLjkiTiA4OcKwMzUnNTIuNiJX!5e0!3m2!1ses!2smx!4v1693943855154!5m2!1ses!2smx"
                     width="80%" height="320" style="border:0;" allowfullscreen="" loading="lazy"
