--- a/assets/pages/contacto.html
+++ b/assets/pages/contacto.html
@@ -68,7 +68,7 @@
             
         </div>
     </div>
-    <footer class="footer  py-3 fixed-bottom ">
+    <footer class="footer   fixed-bottom ">
       
         <div class="container">
             <div class="row">
