--- a/index.html
+++ b/index.html
@@ -58,12 +58,11 @@
     <div id="carouselExampleAutoplaying" class="carousel slide mt-5" data-bs-ride="carousel" data-aos="fade-up"    data-aos-duration="2500">
       <div class="carousel-inner">
         <div class="carousel-item active">
-          <img src="assets/img/1.1.png" class="d-block w-100" alt="...">
+          <img src="assets/img/banner2.jpeg" class="d-block w-100" alt="...">
         </div>
         <div class="carousel-item">
-          <img src="assets/img/2 (1).png" class="d-block w-100" alt="...">
+          <img src="assets/img/banner1.jpeg" class="d-block w-100" alt="...">
         </div>
-
       </div>
       <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleAutoplaying"
         data-bs-slide="prev">
