cambios de ortografia

--- a/assets/pages/nServicios.html
+++ b/assets/pages/nServicios.html
@@ -31,8 +31,8 @@
       <div class="collapse navbar-collapse text-light" id="navbarNavAltMarkup">
         <div class="navbar-nav ms-auto ">
           <a class="nav-link text-light active" aria-current="page" href="../../index.html">Inicio</a>
-          <a class="nav-link text-light " href="nServicios.html">servicios</a>
-          <a class="nav-link text-light " href="../pages/contacto.html">contacto</a>
+          <a class="nav-link text-light " href="nServicios.html">Servicios</a>
+          <a class="nav-link text-light " href="../pages/contacto.html">Contacto</a>
         </div>
       </div>
     </div>
