foto fix links de mas ortografia footer links

--- a/assets/pages/contacto.html
+++ b/assets/pages/contacto.html
@@ -51,7 +51,7 @@
                     <div class="card-body">
                       
                       <p class="card-text"> Para cualquier duda sobre nuestros servicios, o como
-                        podemos ayudar a tu lomito pudes contactarnos al correo:
+                        podemos ayudar a tu lomito puedes contactarnos al correo:
                         contacto@physioanimal.com o via whatsapp al 9999239823.</p>
                     
                     </div>
