--- a/assets/pages/nServicios.html
+++ b/assets/pages/nServicios.html
@@ -47,7 +47,7 @@
           <div class="card-body">
             <h5 class="card-title">Hidroterapia</h5>
             <p class="card-text">Se ocupa del empleo de agua corriente con fines terapéuticos, profilácticos y
-              rehabilitadores mediante enfoques metodológicos especiales.</p>
+              rehabilitadores, mediante enfoques metodológicos especiales.</p>
 
           </div>
         </div>
@@ -56,7 +56,7 @@
         <div class="card">
           <div class="card-body">
             <h5 class="card-title">Termoterapia</h5>
-            <p class="card-text">Se denomina como la aplicación de calor o frío con el objetivo de contribuir a
+            <p class="card-text">Se denomina como la aplicación de calor o frío, con el objetivo de contribuir a
               la salud.</p>
 
           </div>
@@ -77,7 +77,7 @@
         <div class="card">
           <div class="card-body">
             <h5 class="card-title">Magnetoterapia</h5>
-            <p class="card-text">se define como la acción en la que se utilizan imanes permanentes o
+            <p class="card-text">Se define como la acción en la que se utilizan imanes permanentes o
               equipos generadores de campos electromagnéticos, para lograr un objetivo terapéutico.</p>
 
           </div>
@@ -87,7 +87,7 @@
         <div class="card">
           <div class="card-body">
             <h5 class="card-title">Ultrasonido terapéutico</h5>
-            <p class="card-text">se denomina ultrasonido a una vibración mecánica, de frecuencia
+            <p class="card-text">Se denomina ultrasonido a una vibración mecánica, de frecuencia
               excesivamente grande que no pueda ser percibida por el oído humano, en la fisioterapia,
               sirve para tratar la inflamación de las articulaciones, el dolor agudo o crónico,con el objetivo
               de aumentar el flujo sanguíneo local y así favorecer la cascada de inflamación, reduciendo
@@ -102,7 +102,7 @@
         <div class="card">
           <div class="card-body">
             <h5 class="card-title">Electroterapia</h5>
-            <p class="card-text">es un tratamiento fisioterapéutico que usa la corriente eléctrica para
+            <p class="card-text">Es un tratamiento fisioterapéutico que usa la corriente eléctrica para
               estimular determinadas áreas del organismo que sufren procesos inflamatorios o dolor
               nervioso, así como los músculos atrofiados y las lesiones osteomusculares. Tiene
               propiedades antiinflamatorias y analgésicas, además de mejorar el trofismo y potenciar la
@@ -134,11 +134,10 @@
               controlar la inflamación ante una lesión. Estos baños consisten en sumergir de forma
               alternativa la extremidad lesionada en agua fría y caliente (tibia). Por las características de
               la técnica, es ideal para utilizarla especialmente en lesiones en las extremidades.</p>
-
           </div>
         </div>
       </div>
-      <h3 class="text-center mt-3 text-color-principal sombra-textos">Terapia fisica y Rehabilitacion</h3>
+      <h3 class="text-center mt-3 text-color-principal sombra-textos">Terapia Física y Rehabilitación</h3>
       <div class="col-sm-6 mt-3">
         <div class="card">
           <div class="card-body">
@@ -148,7 +147,6 @@
               lesiones. Así, engloba técnicas como el masaje terapéutico, el masaje transverso profundo,
               el drenaje linfático manual terapéutico, la liberación miofascial, el masaje deportivo, el
               crio-masaje, el masaje del tejido conjuntivo, entre otros.</p>
-
           </div>
         </div>
       </div>
