--- a/index.html
+++ b/index.html
@@ -275,9 +275,9 @@
         <div class="col-md-6">
           <p class="mb-0 fuente-brand">Physio Animal
             <ul class="nav col-md-4 mb-3 mb-md-0  list-unstyled  ">
-              <li class="ms-3"><a class="text-muted" href="#"><i class="fa-brands fa-square-facebook iconos-color"></i></a></li>
-              <li class="ms-3"><a class="text-muted" href="#"><i class="fa-brands fa-tiktok iconos-color" ></i></a></li>
-              <li class="ms-3"><a class="text-muted" href="#"><i class="fa-brands fa-square-instagram iconos-color"></i></a></li>
+              <li class="ms-3"><a class="text-muted" href="https://www.facebook.com/share/V9qBJPEN6b34QUys/?mibextid=LQQJ4d"><i class="fa-brands fa-square-facebook iconos-color"></i></a></li>
+              <li class="ms-3"><a class="text-muted" href="https://www.tiktok.com/@physioanimal?_t=8mkAfN7YJb3&_r=1"><i class="fa-brands fa-tiktok iconos-color" ></i></a></li>
+              <li class="ms-3"><a class="text-muted" href="https://www.instagram.com/majoloriao?igsh=MTJnZGZlMncwMGZjMw%3D%3D&utm_source=qr"><i class="fa-brands fa-square-instagram iconos-color"></i></a></li>
             </ul>
           </p>
         
